Prevent text overflow

--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -1,6 +1,7 @@
 body {
     margin: 0.5rem auto;
     width: calc(100% - 1rem);
+    overflow-wrap: break-word;
 }
 
 img {
